--- a/static-build/shared/styles/typography.css
+++ b/static-build/shared/styles/typography.css
@@ -24,7 +24,6 @@ html {
   font-size: var(--font-size--body);
   font-weight: var(--font-weight--light);
   line-height: var(--font-lineheight--body);
-  overflow-x: hidden;
 }
 
 h2 {
